--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.20",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.6",
+    "expo": "~51.0.20",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-gifted-charts": "^1.4.19",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
