--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-sqlite": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
